--- a/TEDx/aboutTEDx.html
+++ b/TEDx/aboutTEDx.html
@@ -44,7 +44,7 @@
 				<li><a href="aboutTEDx.html">關於TEDx</a></li>	
 				<li class="withSubNav clearfix"><a href="about.html">關於我們</a>
 					<ul class="subNav">
-						<li><a href="members.html">團隊介紹</a></li>
+						<li><a href="#">團隊介紹</a></li>
 						<li><a href="#">團隊理念</a></li>
 						<li><a href="contact.html">聯繫我們</a></li>
 					</ul>
@@ -62,36 +62,29 @@
 	<div class="bannerPic-small-cover">
 		<div class="container">
 			<div class="title">
-				<h1>關於TEDxNCCU</h1>
+				<h1>關於TEDx</h1>
 			</div>
 			<div style="padding:10px; color:white; display:block; ">
-				關於政大TEDx，希望能在台灣名列前茅的文學學府，舉辦一個散播理念的演講。
+				關於TEDx： TEDx 的核心就是在散播理念，期能影響世界。
 			</div>
 
 		</div>
 	</div>
 	<div class="bannerPic-small shd-large">
 	</div>
+</div>	
 	
-	<!--div class="bread subBanner" style="position:absolute; top:250px; z-index:30;">
-		<div class="container">
-
-		</div>
-	</div-->	
-</div>
-
-
-
-<div id="content" class="outer bg">
+<div class="outer bg">
 	<div class="container">
 		<div class="block box">
-			<h3>關於TEDxNCCU</h3>
-			<div>
-				<p>TED是目前世界上具有相當知名度的媒體，其理念是「Ideas Worth Spreading」。TED這三個字分別代表的是「技術」（Technology）、「娛樂」（Entertainment）、「設計」（Design）。在過去十多年來，TED以特有的18分鐘演講方式，將世界上具有價值的各種理念傳遞給其聽眾，也為其塑造了獨特風格。2009年，TED開放品牌授權，讓世界各地認同其理念的個人或團體能夠以TEDx的名義與TED的方式來舉辦活動。「理念」是影響人類社會發展深遠的重要因素之一，人類的歷史也圍繞著各種不同的理念而持續不斷地行進著，在社會、經濟、政治、文化等面向均可見其不可抹滅的威力。在未來，「理念」也將扮演引領人類社會與歷史的重要角色。因著科學與技術的發展，「理念」的形成與傳佈也不再僅侷限於學院或專業領域，更具有由下而上之影響的巨大潛力。無論是多麼小的、看似微不足道的「理念」，都有可能透過媒體與現代科技的傳播，而對人類社會造成重大影響。例如1989年的六四天安門事件、2011年的阿拉伯之春、印度的窮人銀行等，都是此類「地方化理念、全球化影響」的例子。因此，我們絕不可忽視這些遍存於社會中大大小小值得深入探究與傳佈的「理念」。基於此，我們決定成立一個TEDx團隊，期待能夠發掘更多好的、值得傳佈的想法，透過TED的模式，以簡單易懂、激勵人心的故事來讓更多人認識到這些理念或想法。</p>
-				<h4>TEDx NCCU理念：</h4>
-					<p>Every idea has its own story. We would like to look for these ideas and their stories, and then share with those who are interested in them. The potential of these ideas might be enormous, but somehow it needs to be discovered and spread all over the world through local team and media. Centered on the issues of Technology, Entertainment, and Design, there will be a lot of locally wonderful thinking worthy of sharing. TEDx will be a platform to achieve this, and moreover it can also be an initiator to develop amazing project contributing to the world.</p>
-			</div>
-			
+				<h3>關於TEDx</h3>
+				<div>
+					<p>About TEDx, x = independently organized event</p>
+					<p>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TEDTalks video and live speakers combine to spark deep discussion and connection in a small group. These local, self-organized events are branded TEDx, where x = independently organized TED event. The TED Conference provides general guidance for the TEDx program, but individual TEDx events are self-organized. (Subject to certain rules and regulations.)</p>
+					<p>About TED<br>
+						TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day conference in California 25 years ago, TED has grown to support those world-changing ideas with multiple initiatives. The annual TED Conference invites the world&rsquo;s leading thinkers and doers to speak for 18 minutes. Their talks are then made available, free, at TED.com. TED speakers have included Bill Gates, Al Gore, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Isabel Allende and UK Prime Minister Gordon Brown. The annual TED Conference takes place in Long Beach, California, with simulcast in Palm Springs; TEDGlobal is held each year in Oxford, UK. TED&rsquo;s media initiatives include TED.com, where new TEDTalks are posted daily, and the Open Translation Project, which provides subtitles and interactive transcripts as well as the ability for any TEDTalk to be translated by volunteers worldwide. TED has established the annual TED Prize, where exceptional individuals with a wish to change the world are given the opportunity to put their wishes into action; TEDx, which offers individuals or groups a way to organize local, independent TED-like events around the world; and the TEDFellows program, helping world-changing innovators from around the globe to become part of the TED community and, with its help, amplify the impact of their remarkable projects and activities.</p>
+					<p>Follow TED on Twitter at twitter.com/TEDTalks, or on Facebook at facebook.com/TED.</p>
+				</div>
 		</div>
 	</div>
 </div>
