--- a/TEDx/manage/login.html
+++ b/TEDx/manage/login.html
@@ -28,15 +28,12 @@
 <nav>
 	<div id="nav" class="container clearfix">
 		<div style="float:left;">
-			<img src="../img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;">
+			<a href="../index.html"><img src="../img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;"></a>
 		</div>
 		<div style="float:right">
 			<ul id="mainNav" class="hrzUL clearfix">
-				<li><a href="../index.html">首頁</a></li>
-				<li><a href="../spnsors.html">贊助夥伴</a>
-				</li>
 				<li class="withSubNav clearfix">
-					<a href="../acts/index.html" >TED活動</a>
+					<a href="../acts/index.html">TED活動</a>
 					<ul class="subNav">
 						<li><a href="#">2013 From Idea To Action</a></li>
 					</ul>
@@ -44,11 +41,12 @@
 				<li class="withSubNav clearfix">
 					<a href="../blog/index.html">文章分享</a>
 					<ul class="subNav">
-						<li><a href="#">部落格</a></li>
-						<li><a href="#">TED TALK</a></li>
-						<li><a href="#">活動成果</a></li>
+						<li><a href="../blog/blog.html">部落格</a></li>
+						<li><a href="../blog/tedtalk.html">TED TALK</a></li>
+						<li><a href="../blog/act.html">活動成果</a></li>
 					</ul>
 				</li>
+								<li><a href="../spnsors.html">贊助夥伴</a>	</li>
 				<li><a href="../aboutTEDx.html">關於TEDx</a></li>	
 				<li class="withSubNav clearfix"><a href="../about.html">關於我們</a>
 					<ul class="subNav">
@@ -57,6 +55,7 @@
 						<li><a href="../contact.html">聯繫我們</a></li>
 					</ul>
 				</li>
+				<li><a href="https://www.facebook.com/tedxnccu">FaceBook</a></li>
 	
 			</ul>
 		</div>
