--- a/TEDx/manage/manage.html
+++ b/TEDx/manage/manage.html
@@ -36,15 +36,12 @@
 <nav>
 	<div id="nav" class="container clearfix">
 		<div style="float:left;">
-			<img src="../img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;">
+			<a href="../index.html"><img src="../img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;"></a>
 		</div>
 		<div style="float:right">
 			<ul id="mainNav" class="hrzUL clearfix">
-				<li><a href="../index.html">首頁</a></li>
-				<li><a href="../spnsors.html">贊助夥伴</a>
-				</li>
 				<li class="withSubNav clearfix">
-					<a href="../acts/index.html" >TED活動</a>
+					<a href="../acts/index.html">TED活動</a>
 					<ul class="subNav">
 						<li><a href="#">2013 From Idea To Action</a></li>
 					</ul>
@@ -52,11 +49,12 @@
 				<li class="withSubNav clearfix">
 					<a href="../blog/index.html">文章分享</a>
 					<ul class="subNav">
-						<li><a href="#">部落格</a></li>
-						<li><a href="#">TED TALK</a></li>
-						<li><a href="#">活動成果</a></li>
+						<li><a href="../blog/blog.html">部落格</a></li>
+						<li><a href="../blog/tedtalk.html">TED TALK</a></li>
+						<li><a href="../blog/act.html">活動成果</a></li>
 					</ul>
 				</li>
+								<li><a href="../spnsors.html">贊助夥伴</a>	</li>
 				<li><a href="../aboutTEDx.html">關於TEDx</a></li>	
 				<li class="withSubNav clearfix"><a href="../about.html">關於我們</a>
 					<ul class="subNav">
@@ -65,6 +63,7 @@
 						<li><a href="../contact.html">聯繫我們</a></li>
 					</ul>
 				</li>
+				<li><a href="https://www.facebook.com/tedxnccu">FaceBook</a></li>
 	
 			</ul>
 		</div>
@@ -100,8 +99,10 @@
 <div class="outer bg">
 	<div class="container managePage-pre block">
 		<div class="padding">
-			<h3><a href="../blog/manage.html">管理文章</a></h3>
 			<h3><a href="../blog/edit.html">發表文章</a></h3>
+			<h3><a href="../blog/grass.html">草稿列表</a></h3>
+			<h3><a href="../blog/manage.html">文章列表</a></h3>
+			<h3></h3>
 		</div>
 	</div>
 </div>
