--- a/Teachers/PostModern/index.html
+++ b/Teachers/PostModern/index.html
@@ -36,48 +36,51 @@
 		</div>
 	</div><!--header_inner-->
 
-	<nav>
+		<nav>
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
-				<li><a href="index.html" class="active">首頁</a></li>
-				<li><a href="#">最新消息</a></li>
-				<li id="aboutBtn" class="withSubNav">
-					<a href="about.html">關於研討會</a>
+				<li><a href="index.html">首頁</a></li>
+				<li><a href="news.html">新聞</a></li>
+				<li class="withSubNav"><a href="ideal.html" >關於</a>
 					<ul id="aboutNav" class=" subNav clearfix">
-						<li><a href="#ideal">研討會宗旨</a></li>
-						<li><a href="#act">活動內容</a></li>
-						<li><a href="#subIssue">相關子題</a></li>
-						<li><a href="">流程</a></li>
-						
-						<li><a href="">住宿</a></li>
+						<li><a href="ideal.html#ideal">研討會宗旨</a></li>
+						<li><a href="ideal.html#mean">後現代的意涵</a></li> 
+						<li><a href="ideal.html#link">後現代與教育的連結</a></li>
+						<li><a href="ideal.html#crossroad">兩岸高等教育交流現況</a></li>
+					</ul>		 		
+				</li>
+				<li id="aboutBtn" class="withSubNav"> <a href="about.html" class="active">內容</a>
+					<ul id="aboutNav" class=" subNav clearfix">
+						<li><a href="about.html#act">活動內容</a></li>
+						<li><a href="about.html#subIssue">相關子題</a></li>
+						<li><a href="agenda.html">研討會議程</a></li>
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
 				</li>
-				<li class="withSubNav">
-					<a href="members-china.html">研討會貴賓</a>
+				<li class="withSubNav"> <a href="members-china.html">貴賓</a>
 					<ul class="subNav clearfix">
 						<li><a href="members-taiwan.html">台灣與會學者</a></li>
 						<li><a href="members-china.html">大陸與會學者</a></li>
 					</ul>
 				</li>
 				<li><a href="join.html">報名</a></li>
-				<li><a href="#">研討會發表</a></li>
-
+				<li><a href="publications.html">發表</a></li>
 			</ul>
 			<ul id="navListRight" class="lineUL" >
-				<li><a href="#">政大教育</a></li>
-				<li><a href="#">政大周邊</a></li>
+				<li><a href="//www.educ.nccu.edu.tw">政大教育</a></li>
+				<li><a href="play.html">政大周邊</a></li>
 			</ul>
 		</div>
 	</nav>
+
 </header>
 
 
 <div id="content">
 	<div id="picShowOuter" >
 		<div id="picShowInner" class="container">
-			<h3>政大一景</h3>
-			<div id="picShow">
+			<!--h3>政大一景</h3-->
+			<div id="picShow" style="margin:20px 0px;">
 				<div id="pic1" class="picshowPic showingPic" ><img src="img/pic1.png"></div>
 				<div id="pic2" class="picshowPic" ><img src="img/pic2.jpg"></div>
 				<div id="pic3" class="picshowPic"><img src="img/pic3.jpg" width="100%"></div>
@@ -91,15 +94,35 @@
 					<div id="rightBtn" style="position:absolute; top:80px; right:-100px; z-index:6;background:url(img/rightBtn.png); width:78px; height:158px;"></div>
 				</div>
 			</div>
-			<div>
-				<p>Contents
-			</div>
 		</div>
 	</div>
 	
 	<div id="news" class="container clearfix">
 		<h3>最新消息</h3>
-		<div id="newsInner" class="inner">
+		<table class="table">
+			<tr>
+				<td>第一屆後現代研討會論壇 即將開辦囉!</td>
+				<td>2013/09/03</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+		</table>
+
+		<!--div id="newsInner" class="inner">
 			<div class="news">
 				<div class="img" style="background-image:url(img/news/9bbf6f84655154fa720887c3669202e8.jpg);"></div>
 				<h4>今天天氣真的很不錯</h4>
@@ -115,7 +138,7 @@
 				<h4>今天天氣真的很不錯</h4>
 				<p>今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，</p>
 			</div>
-		</div>
+		</div-->
 	</div>
 	
 	
