--- a/Teachers/PostModern/publications.html
+++ b/Teachers/PostModern/publications.html
@@ -16,7 +16,7 @@
 
 </style>
 <!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceEndEditable --> 
 </head>
 
 <body>
@@ -27,38 +27,43 @@
 			<h1 id="mainTitle">2013年第一屆海峽兩岸教育學院領導人論壇</h1>
 			<h2 id="subTitle" >後現代教育發展與兩岸教育新方向</h2>
 		</div>
-	</div><!--header_inner--><!-- InstanceBeginEditable name="nav" -->
+	</div><!--header_inner--><!-- T emplateBeginEditable name="nav" --><!-- T emplateEndEditable -->
 	<nav>
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html">首頁</a></li>
 				<li><a href="#">最新消息</a></li>
-				<li id="aboutBtn" class="withSubNav"> <a href="about.html" class="active">關於研討會</a>
+				<li class="withSubNav"><a href="ideal.html" >關於</a>
 					<ul id="aboutNav" class=" subNav clearfix">
-						<li><a href="#ideal">研討會宗旨</a></li>
-						<li><a href="#act">活動內容</a></li>
-						<li><a href="#subIssue">相關子題</a></li>
-						<li><a href="">流程</a></li>
-						<li><a href="">住宿</a></li>
-						<li><a href="">Q&amp;A</a></li>
+						<li><a href="ideal.html#ideal">研討會宗旨</a></li>
+						<li><a href="ideal.html#mean">後現代的意涵</a></li> 
+						<li><a href="ideal.html#link">後現代與教育的連結</a></li>
+						<li><a href="ideal.html#crossroad">兩岸高等教育交流現況</a></li>
+					</ul>		 		
+				</li>
+				<li id="aboutBtn" class="withSubNav"> <a href="about.html" class="active">內容</a>
+					<ul id="aboutNav" class=" subNav clearfix">
+						<li><a href="about.html#act">活動內容</a></li>
+						<li><a href="about.html#subIssue">相關子題</a></li>
+						<li><a href="agenda.html">研討會議程</a></li>
 					</ul>
 				</li>
-				<li class="withSubNav"> <a href="members-china.html">研討會貴賓</a>
+				<li class="withSubNav"> <a href="members-china.html">貴賓</a>
 					<ul class="subNav clearfix">
 						<li><a href="members-taiwan.html">台灣與會學者</a></li>
 						<li><a href="members-china.html">大陸與會學者</a></li>
 					</ul>
 				</li>
 				<li><a href="join.html">報名</a></li>
-				<li><a href="#">研討會發表</a></li>
+				<li><a href="publications.html">發表</a></li>
 			</ul>
 			<ul id="navListRight" class="lineUL" >
-				<li><a href="#">政大教育</a></li>
-				<li><a href="#">政大周邊</a></li>
+				<li><a href="//www.educ.nccu.edu.tw">政大教育</a></li>
+				<li><a href="play.html">政大周邊</a></li>
 			</ul>
 		</div>
 	</nav>
-	<!-- InstanceEndEditable -->
+	
 	<!-- InstanceBeginEditable name="header" -->
 	<!-- InstanceEndEditable -->
 	</header>
