--- a/Teachers/PostModern/members-taiwan.html
+++ b/Teachers/PostModern/members-taiwan.html
@@ -1,11 +1,21 @@
 <!doctype html>
-<html>
+<html><!-- InstanceBegin template="/Templates/PostModern.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
-<title>後現代研討會-台灣與會學者</title>
+<!-- InstanceBeginEditable name="title" -->
+<title>與會台灣學者--國立政治大學--後現代教育論壇</title>
+<!-- InstanceEndEditable -->
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/PostModern.css" rel="stylesheet" type="text/css">
+
+<!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
+<style>
+
+
+</style>
+<!-- InstanceBeginEditable name="head" -->
 <!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
 <style>
@@ -17,7 +27,9 @@
 .memIntro > h4 {text-align:center; }
 .memIntro >p { font-family:"微軟正黑體"; font-size:14px; text-align:center; color:gray;}
 </style>
+<!-- InstanceEndEditable --> 
 </head>
+
 <body>
 <header>
 	<div id="header_inner" class="container clearfix">
@@ -26,44 +38,50 @@
 			<h1 id="mainTitle">2013年第一屆海峽兩岸教育學院領導人論壇</h1>
 			<h2 id="subTitle" >後現代教育發展與兩岸教育新方向</h2>
 		</div>
-	</div><!--header_inner-->
-
+	</div><!--header_inner--><!-- T emplateBeginEditable name="nav" --><!-- T emplateEndEditable -->
 	<nav>
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
-				<li><a href="index.html" class="active">首頁</a></li>
-				<li><a href="#">最新消息</a></li>
-				<li id="aboutBtn" class="withSubNav">
-					<a href="about.html">關於研討會</a>
+				<li><a href="index.html">首頁</a></li>
+				<li><a href="news.html">新聞</a></li>
+				<li class="withSubNav"><a href="ideal.html" >關於</a>
 					<ul id="aboutNav" class=" subNav clearfix">
-						<li><a href="#ideal">研討會宗旨</a></li>
-						<li><a href="#act">活動內容</a></li>
-						<li><a href="#subIssue">相關子題</a></li>
-						<li><a href="">流程</a></li>
-						
-						<li><a href="">住宿</a></li>
+						<li><a href="ideal.html#ideal">研討會宗旨</a></li>
+						<li><a href="ideal.html#mean">後現代的意涵</a></li> 
+						<li><a href="ideal.html#link">後現代與教育的連結</a></li>
+						<li><a href="ideal.html#crossroad">兩岸高等教育交流現況</a></li>
+					</ul>		 		
+				</li>
+				<li id="aboutBtn" class="withSubNav"> <a href="about.html" class="active">內容</a>
+					<ul id="aboutNav" class=" subNav clearfix">
+						<li><a href="about.html#act">活動內容</a></li>
+						<li><a href="about.html#subIssue">相關子題</a></li>
+						<li><a href="agenda.html">研討會議程</a></li>
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
 				</li>
-				<li class="withSubNav">
-					<a href="members-china.html">研討會貴賓</a>
+				<li class="withSubNav"> <a href="members-china.html">貴賓</a>
 					<ul class="subNav clearfix">
 						<li><a href="members-taiwan.html">台灣與會學者</a></li>
 						<li><a href="members-china.html">大陸與會學者</a></li>
 					</ul>
 				</li>
 				<li><a href="join.html">報名</a></li>
-				<li><a href="#">研討會發表</a></li>
-
+				<li><a href="publications.html">發表</a></li>
 			</ul>
 			<ul id="navListRight" class="lineUL" >
-				<li><a href="#">政大教育</a></li>
-				<li><a href="#">政大周邊</a></li>
+				<li><a href="//www.educ.nccu.edu.tw">政大教育</a></li>
+				<li><a href="play.html">政大周邊</a></li>
 			</ul>
 		</div>
 	</nav>
-</header>
-
+	
+	<!-- InstanceBeginEditable name="header" -->
+	
+	
+	<!-- InstanceEndEditable -->
+	</header>
+<!-- InstanceBeginEditable name="content" -->
 <div id="content">
 	<div class="container">
 	<h3>台灣與會貴賓</h3>
@@ -212,6 +230,7 @@
 	</div>
 </div>
 
+<!-- InstanceEndEditable -->
 <footer>
 	<div id="footerInner" class="container">
 		<div id="footerLogo" class="clearfix">
@@ -220,18 +239,19 @@
 				<h4>屆海峽兩岸教育學院領導人論壇</h4>
 				<p>主辦單位：國立政治大學教育學院</p>
 				<p>協辦單位：國立政治大學教育行政與政策研究所<br>
-				<span style="margin-left:5em;">國立政治大學教育系</span></p>
+				<span style="margin-left:5em;">國立政治大學教育學系</span><br>
+				<span style="margin-left:5em;">國立政治大學學校行政碩士在職專班</span></p>
+
 			</div>
 			<div id="contact" class="footerInfoBox" style="width:400px;">
 				<h4>聯絡方式</h4>
 				<p>電話：(02)2939-3091轉62331或62281</p>
 				<p>傳真：(02)29387717</p>
 				<p>E-Mail：nccuedu@nccu.edu.tw</p>
-				<p>地址：11605 台北市文山區指南路2段64號 國立政治大學教育學系</p>
-				
+				<p>地址：11605 台北市文山區指南路2段64號 國立政治大學教育學系</p>			
 			</div>
 		</div>
-		</div>		
+		
 	</div>
 <!--div id="footerInner" class="container">
 	<div id="footNavs">
@@ -256,8 +276,13 @@
 	</div>
 </div-->
 </footer>
+
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
+<!--script src="../Teachers/PostModern/js/bootstrap.min.js" type="text/javascript"></script-->
+<!-- InstanceBeginEditable name="js" -->
+<script type="text/javascript"></script>
+<!-- InstanceEndEditable -->
+
 </body>
-</html>
+<!-- InstanceEnd --></html>
