--- a/Teachers/PostModern/news.html
+++ b/Teachers/PostModern/news.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html> 
+<html><!-- InstanceBegin template="/Templates/PostModern.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
-<!-- TemplateBeginEditable name="title" -->
+<!-- InstanceBeginEditable name="title" -->
 <title>PostModern</title>
-<!-- TemplateEndEditable -->
-<link href="../Teachers/PostModern/css/reset.css" rel="stylesheet" type="text/css">
-<link href="../Teachers/PostModern/css/jquery-ui.css" rel="stylesheet" type="text/css">
-<link href="../Teachers/PostModern/css/PostModern.css" rel="stylesheet" type="text/css">
+<!-- InstanceEndEditable -->
+<link href="css/reset.css" rel="stylesheet" type="text/css">
+<link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
+<link href="css/PostModern.css" rel="stylesheet" type="text/css">
 
 <!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
@@ -15,14 +15,14 @@
 
 
 </style>
-<!-- TemplateBeginEditable name="head" -->
-<!-- TemplateEndEditable --> 
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable --> 
 </head>
 
 <body>
 <header>
 	<div id="header_inner" class="container clearfix">
-		<div id="logo" ><img src="../Teachers/PostModern/img/image021.png" width="100" ></div>
+		<div id="logo" ><img src="img/image021.png" width="100" ></div>
 		<div id="title">
 			<h1 id="mainTitle">2013年第一屆海峽兩岸教育學院領導人論壇</h1>
 			<h2 id="subTitle" >後現代教育發展與兩岸教育新方向</h2>
@@ -31,31 +31,31 @@
 	<nav>
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
-				<li><a href="../Teachers/PostModern/index.html">首頁</a></li>
+				<li><a href="index.html">首頁</a></li>
 				<li><a href="news.html">新聞</a></li>
-				<li class="withSubNav"><a href="../Teachers/PostModern/ideal.html" >關於</a>
+				<li class="withSubNav"><a href="ideal.html" >關於</a>
 					<ul id="aboutNav" class=" subNav clearfix">
-						<li><a href="../Teachers/PostModern/ideal.html#ideal">研討會宗旨</a></li>
-						<li><a href="../Teachers/PostModern/ideal.html#mean">後現代的意涵</a></li> 
-						<li><a href="../Teachers/PostModern/ideal.html#link">後現代與教育的連結</a></li>
-						<li><a href="../Teachers/PostModern/ideal.html#crossroad">兩岸高等教育交流現況</a></li>
+						<li><a href="ideal.html#ideal">研討會宗旨</a></li>
+						<li><a href="ideal.html#mean">後現代的意涵</a></li> 
+						<li><a href="ideal.html#link">後現代與教育的連結</a></li>
+						<li><a href="ideal.html#crossroad">兩岸高等教育交流現況</a></li>
 					</ul>		 		
 				</li>
-				<li id="aboutBtn" class="withSubNav"> <a href="../Teachers/PostModern/about.html" class="active">內容</a>
+				<li id="aboutBtn" class="withSubNav"> <a href="about.html" class="active">內容</a>
 					<ul id="aboutNav" class=" subNav clearfix">
-						<li><a href="../Teachers/PostModern/about.html#act">活動內容</a></li>
-						<li><a href="../Teachers/PostModern/about.html#subIssue">相關子題</a></li>
-						<li><a href="../Teachers/PostModern/agenda.html">研討會議程</a></li>
+						<li><a href="about.html#act">活動內容</a></li>
+						<li><a href="about.html#subIssue">相關子題</a></li>
+						<li><a href="agenda.html">研討會議程</a></li>
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
 				</li>
-				<li class="withSubNav"> <a href="../Teachers/PostModern/members-china.html">貴賓</a>
+				<li class="withSubNav"> <a href="members-china.html">貴賓</a>
 					<ul class="subNav clearfix">
-						<li><a href="../Teachers/PostModern/members-taiwan.html">台灣與會學者</a></li>
-						<li><a href="../Teachers/PostModern/members-china.html">大陸與會學者</a></li>
+						<li><a href="members-taiwan.html">台灣與會學者</a></li>
+						<li><a href="members-china.html">大陸與會學者</a></li>
 					</ul>
 				</li>
-				<li><a href="../Teachers/PostModern/join.html">報名</a></li>
+				<li><a href="join.html">報名</a></li>
 				<li><a href="publications.html">發表</a></li>
 			</ul>
 			<ul id="navListRight" class="lineUL" >
@@ -65,21 +65,21 @@
 		</div>
 	</nav>
 	
-	<!-- TemplateBeginEditable name="header" -->
+	<!-- InstanceBeginEditable name="header" -->
 	
 	
-	<!-- TemplateEndEditable -->
+	<!-- InstanceEndEditable -->
 	</header>
-<!-- TemplateBeginEditable name="content" -->
+<!-- InstanceBeginEditable name="content" -->
 <div>
 &nbsp;
 </div>
 
-<!-- TemplateEndEditable -->
+<!-- InstanceEndEditable -->
 <footer>
 	<div id="footerInner" class="container">
 		<div id="footerLogo" class="clearfix">
-			<img src="../Teachers/PostModern/img/image021.png" width="60" class="footerInfoBox" style="width:60px; padding:30px">
+			<img src="img/image021.png" width="60" class="footerInfoBox" style="width:60px; padding:30px">
 			<div id="footerTitle" class="footerInfoBox" style="width:380px; padding-left:20px">
 				<h4>屆海峽兩岸教育學院領導人論壇</h4>
 				<p>主辦單位：國立政治大學教育學院</p>
@@ -122,12 +122,12 @@
 </div-->
 </footer>
 
-<script src="../Teachers/PostModern/js/jquery.min.js" type="text/javascript"></script>
-<script src="../Teachers/PostModern/js/jquery-ui.js" type="text/javascript"></script>
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/jquery-ui.js" type="text/javascript"></script>
 <!--script src="../Teachers/PostModern/js/bootstrap.min.js" type="text/javascript"></script-->
-<!-- TemplateBeginEditable name="js" -->
+<!-- InstanceBeginEditable name="js" -->
 <script type="text/javascript"></script>
-<!-- TemplateEndEditable -->
+<!-- InstanceEndEditable -->
 
 </body>
-</html>
+<!-- InstanceEnd --></html>
