--- a/Teachers/PostModern/publications.html
+++ b/Teachers/PostModern/publications.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html><!-- InstanceBegin template="/Templates/PostModern.dwt" codeOutsideHTMLIsLocked="false" -->
+<html><!-- InstanceBegin template="/Templates/PostModern.dwt" codeOutsideHTMLIsLocked="false" --> 
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="title" -->
@@ -32,7 +32,7 @@
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html">首頁</a></li>
-				<li><a href="#">最新消息</a></li>
+				<li><a href="news.html">新聞</a></li>
 				<li class="withSubNav"><a href="ideal.html" >關於</a>
 					<ul id="aboutNav" class=" subNav clearfix">
 						<li><a href="ideal.html#ideal">研討會宗旨</a></li>
@@ -46,6 +46,7 @@
 						<li><a href="about.html#act">活動內容</a></li>
 						<li><a href="about.html#subIssue">相關子題</a></li>
 						<li><a href="agenda.html">研討會議程</a></li>
+						<li><a href="">Q&amp;A</a></li>
 					</ul>
 				</li>
 				<li class="withSubNav"> <a href="members-china.html">貴賓</a>
