--- a/TEDx/index.html
+++ b/TEDx/index.html
@@ -118,16 +118,16 @@ hr { display:block; width:100%; background:url(../img/hr.png) top center no-repe
 	<div class="container "  style="height:540px; position:relative;">
 		<div id="infos">
 			<div id="info1" class="box Info activeInfo">
-				<h3>TEDxNCCU</h3>
-				<p>今天天氣還不錯，我在為一上班，遇到很好的主管，有冷氣吹，有電腦用，有事情做不會無聊，天啊我在打什麼費文，沒辦法，為了測試藥用...今天天氣還不錯，我在為一上班，遇到很好的主管，有冷氣吹，有電腦用，有事情做不會無聊，天啊我在打什麼費文，沒辦法，為了測試藥用...</p>
+				<h3>想●動</h3>
+				<p>好的想法是帶來改變的第一步，然而，改變之所以能夠發揮效用則有賴於行動。今年的主題是「想、動 (From Idea to Action)，旨在強調一個簡單的理念從發想到落實的過程，以及彼此的互動關係。</p>
 			</div>
 			<div id="info2" class="box Info">
-				<h3>From IDeas To Actions</h3>
-				<p>想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!</p>
+				<h3>TEDxNCCU的想望</h3>
+				<p>我們成立一個TEDx團隊，期待能夠發掘更多好的、值得傳佈的想法，透過TED的模式，以簡單易懂、激勵人心的故事來讓更多人認識到這些理念或想法</p>
 			</div>
 			<div id="info3" class="box Info">
-				<h3>Good Morning</h3>
-				<p>祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣</p>
+				<h3>TEDx精神</h3>
+				<p>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TEDTalks video and live speakers combine to spark deep discussion and connection in a small group. </p>
 			</div>
 		</div>
 
@@ -162,7 +162,7 @@ hr { display:block; width:100%; background:url(../img/hr.png) top center no-repe
 	<div class="container clearfix">
 		<div class="index-board-1 block">
 			<div class="index-board-inner">
-				<h3 class="tag">about TEDx</h3>
+				<a class="tag" href="aboutTEDx.html"><h3>about TEDx</h3></a>
 				<p>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TEDTalks video and live speakers combine to spark deep discussion and connection in a small group.</p>
 			</div>
 		</div>
@@ -170,7 +170,7 @@ hr { display:block; width:100%; background:url(../img/hr.png) top center no-repe
 		<!--h3 class="tag">熱門演講</h3-->
 		<div class="index-board-2 block">
 			<div class="index-board-inner">
-				<h3 class="tag">Hot TEDx Talk</h3>
+				<a class="tag" href="blog/tedtalk.html"><h3 >Hot TEDx Talk</h3></a>
 				<div id="hotMovList" class="clearfix" style="width:580px; margin-top:20px;">
 
 						<div style="margin-right:20px; float:left;"><img src="img/mov1.jpg"></div>
@@ -202,7 +202,7 @@ hr { display:block; width:100%; background:url(../img/hr.png) top center no-repe
 	<div class="container clearfix">
 		<div class="index-board-2 block">
 			<div class="index-board-inner">
-				<h3 class="tag">最新文章分享</h3>
+				<a class="tag" href="blog/index.html"><h3>最新文章分享</h3></a>
 				
 					<ul class="largeUL apdArea" >
 					</ul>
@@ -212,7 +212,7 @@ hr { display:block; width:100%; background:url(../img/hr.png) top center no-repe
 		
 		<div class="index-board-1 block">
 			<div class="index-board-inner">
-				<h3 class="tag">about TEDxNCCU</h3>
+				<a class="tag" href="about.html"><h3>about TEDxNCCU</h3></a>
 				<p>無論是多麼小的、看似微不足道的「理念」，都有可能對人類社會造成重大影響。基於此，我們決定成立一個TEDx團隊，期待能夠發掘更多值得傳佈的想法，透過TED的模式，以簡單易懂、激勵人心的故事來讓更多人認識到這些理念或想法。</p>
 			</div>
 		</div>
@@ -236,7 +236,7 @@ hr { display:block; width:100%; background:url(../img/hr.png) top center no-repe
 <footer class="outer-small clearfix">
 	<div class="container clearfix">
 		<ul class="hrzUL foot_nav">
-			<li><a href="act/FromIdeaToAction.html">From Idea to Action</a></li>
+			<li><a href="acts/index.html">From Idea to Action</a></li>
 			<li><a href="sponsor.html">贊助我們</a></li>
 			<li><a href="contact.html">聯絡我們</a></li>
 			<li><a href="manage/login.html">管理模式</a></li>
@@ -363,9 +363,10 @@ function pullBlog () {
 	Parse.initialize("BFuEvRNBwRW6MScfT6nIUrhZaKMBriF4VpAC0DwD", "MvYBNO5NQ6DeixPpLgmH60wQDQvQrf5nIrx6RHgy");
 	var TEDxBLOG = Parse.Object.extend("TEDxBLOG");
 	var query = new Parse.Query(TEDxBLOG);
+	query.descending('date');
+	query.limit (8);
 	query.find({
 		success:function (o){
-			
 			for (var i = 0 ; i < o.length ; i++){
 				blog = getBlog (o[i]);
 				show (blog);
