--- a/TEDx/spnsors.html
+++ b/TEDx/spnsors.html
@@ -16,7 +16,7 @@
 <style>
 .spnList { margin-top:50px;}
 .spnLogo { margin-right:20px; margin-top:20px; float:left;}
-.spnLogo > img { width:420px;}
+.spnLogo > img { width:168px;}
 
 </style>
 <!-- InstanceEndEditable -->
@@ -117,8 +117,7 @@
 <footer class="outer-small">
 	<div class="container clearfix">
 		<ul class="hrzUL foot_nav">
-			<li><a href="act/FromIdeaToAction.html">From Idea to Action</a></li>
-			<li><a href="sponsor.html">贊助我們</a></li>
+			<li><a href="acts/index.html">From Idea to Action</a></li>
 			<li><a href="contact.html">聯絡我們</a></li>
 			<li><a href="manage/login.html">管理模式</a></li>
 		</ul>
