--- a/TEDx/acts/index.html
+++ b/TEDx/acts/index.html
@@ -14,7 +14,7 @@
 <link href="../css/tedxnccu2.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head2" -->
 <style>
-
+.actInfo > h3 { margin-top:20px; }
 
 
 </style>
@@ -47,7 +47,7 @@
 				<li><a href="../aboutTEDx.html">關於TEDx</a></li>	
 				<li class="withSubNav clearfix"><a href="../about.html">關於我們</a>
 					<ul class="subNav">
-						<li><a href="members.html">團隊介紹</a></li>
+						<li><a href="../members.html">團隊介紹</a></li>
 						<li><a href="#">團隊理念</a></li>
 						<li><a href="../contact.html">聯繫我們</a></li>
 					</ul>
@@ -84,12 +84,12 @@
 			<!--div style="width:100%; background:rgba(255,0,0,1);">
 
 			</div-->
-			<div class=" box">
+			<div class=" box actInfo">
 				<h2>2013年會主題：From Ideas to Actions</h2>
-				<h3>From Idea to Action</h3>
+				<h3>From Idea to Action</h3><hr>
 				<p>今年的主題是「From Idea to Action」，旨在強調一個簡單的理念從發想到落實的過程，以及彼此的互動關係。好的想法是帶來改變的第一步，然而，改變之所以能夠發揮效用則有賴於行動。當想法從抽象的概念經由行動轉化成具體的事件後，它便與外在的世界有了對話；此外，對外在世界而言，行動的價值與意義又在於其背後的核心理念，由此可見觀念與行動密不可分的關係。德國猶太裔政治哲學家漢娜‧鄂蘭論思考時有言，思考必須透過實踐才能在公共領域中被釋放出來，而每一次行動過後又當復歸於思考，然後再做出新的行動，二者不斷的良性循環促進個人與社會達到日新又新的境界。因此，今年的年會不僅期望講者能夠分享各自的創新想法，更著重於如何落實想法，讓創新力與行動力相輔相成，好的想法便不會因為碰到執行障礙而胎死腹中；聽眾在受啟發的同時也能夠從不一樣的角度思考想法與行動的互動關係。</p>
-				<img src="../img/pic2.jpg" class="content-img" >
-				<h3>計劃理念TED </h3>
+				<div style="height:500px; overflow:hidden;"><img src="../img/activities/event.png" class="content-img" ></div>
+				<h3>計劃理念TED </h3><hr>
 				<p>是致力於分享創新想法的非營利組織，其核心理念是「Ideas Worth Spreading」，透過18 分鐘的演講方式，邀請各領域的人士分享他們的想法與故事。這些想法或從自身的專業而來，或從實踐的角度親身體驗世界，或透過科學與技術的發展來想像人與人之間的互動、人類社會的未來等。最重要的是，在這些分享的故事中，唯一不變的是講者試圖把觀念落實為行動，進而影響並改善世界的終極想望。TED 於1984 年在美國成立，三個字各自代表著「科技」（Technology）、「娛樂」（Entertainment）與「設計」（Design）。2009 年，TED開放品牌授權，讓世界各地認同其理念的個人或團體能夠以TEDx 的品牌形象與TED 的方式來舉辦活動，使TED 涵蓋的領域比以往更加豐富廣泛。目前台灣共有18 個TED 團隊，以大學名義成立的佔了11 個，分別有北部的台大(TEDxTaida)、政大(TEDXNCCU)、清大(TEDxNTHU)、交大(TEDxNCTU)、中央(TEDxNCU)、北醫(TEDxTMU)、文化(TEDxCCU)、元智(TEDxYuanZeU)；以及南部的中山(TEDxNSYSU)、成大(TEDxTainan)和雲科大(TEDxYunTechU)。透過TEDx 的活動一方面能夠挖掘出隱藏在台灣各個角落的人才及其創新的理念，讓更多人看見；另方面經由網路媒體紀錄且公開播放的做法，正是替台灣建立一個專屬於自己的智庫，其重要性在於觀念的影響力。好的理念可以改變一個人的思考，並連帶影響個人與外在世界的溝通方式和態度，最終達到改善社會的目的；反之，若未能時時接收新的觀點，則難以突破原有的思維模式。TED 與TEDx 期望用簡潔有力的方式傳達振奮人心的理念，讓觀者能在輕鬆自適的狀態下獲得啟發，而2011 年於政大國際發展書院所成立的TEDxNCCU 策展團隊，即希望秉持著TED 的精神，將更多更好的想法與行動傳遞到世界的各個角落。今年的年會將以全新的面貌在政大校園舉行，並期待將影響力擴散至整個台灣社會，開啟更多未來行動的可能性。</p>
 			</div>
 		</div>
@@ -107,8 +107,7 @@
 <footer class="outer-small">
 	<div class="container clearfix">
 		<ul class="hrzUL foot_nav">
-			<li><a href="../act/FromIdeaToAction.html">From Idea to Action</a></li>
-			<li><a href="../sponsor.html">贊助我們</a></li>
+			<li><a href="index.html">From Idea to Action</a></li>
 			<li><a href="../contact.html">聯絡我們</a></li>
 			<li><a href="../manage/login.html">管理模式</a></li>
 		</ul>
