--- a/TEDx/manage/manage.html
+++ b/TEDx/manage/manage.html
@@ -28,6 +28,8 @@
 <style>
 .managePage-pre { height:200px; background:white;} 
 
+#logOut { display:block; background:rgb(0,0,0); color:white; width:auto; padding:20px; text-align:center;}
+#logOut:hover { background:rgba(0,0,0,.8);}
 </style>
 <!-- InstanceEndEditable -->
 </head>
@@ -58,7 +60,7 @@
 				<li><a href="../aboutTEDx.html">關於TEDx</a></li>	
 				<li class="withSubNav clearfix"><a href="../about.html">關於我們</a>
 					<ul class="subNav">
-						<li><a href="members.html">團隊介紹</a></li>
+						<li><a href="../members.html">團隊介紹</a></li>
 						<li><a href="#">團隊理念</a></li>
 						<li><a href="../contact.html">聯繫我們</a></li>
 					</ul>
@@ -110,19 +112,25 @@
 	<div class="container managePage-pre block">
 	</div>
 </div>
+<div class="outer bg">
+	<div class="container block">
+		<a id="logOut">登出</a>
+	</div>
+</div>
+
 <noscript>
 <h1>
 	如果沒有 javascript 則無法執行編輯動作!!
 </h1>
 </noscript>
+
 <!-- InstanceEndEditable -->
 
 
 <footer class="outer-small">
 	<div class="container clearfix">
 		<ul class="hrzUL foot_nav">
-			<li><a href="../act/FromIdeaToAction.html">From Idea to Action</a></li>
-			<li><a href="../sponsor.html">贊助我們</a></li>
+			<li><a href="../acts/index.html">From Idea to Action</a></li>
 			<li><a href="../contact.html">聯絡我們</a></li>
 			<li><a href="login.html">管理模式</a></li>
 		</ul>
@@ -145,6 +153,12 @@
 <script src="../js/TEDxNCCU.js" type="text/javascript"></script> 
 <!-- InstanceBeginEditable name="js-2" -->
 <script type="text/javascript">
+$('#logOut').click(function (){
+	Parse.User.logOut();
+	window.location = "../index.html";
+	return false;
+});
+
 </script>
 <!-- InstanceEndEditable -->
 </body>
