--- a/Teachers/PostModern/members-taiwan.html
+++ b/Teachers/PostModern/members-taiwan.html
@@ -2,6 +2,8 @@
 <html><!-- InstanceBegin template="/Templates/PostModern.dwt" codeOutsideHTMLIsLocked="false" --> 
 <head>
 <meta charset="utf-8">
+<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="js/parse-1.2.8.min.js" type="text/javascript"></script>
 <!-- InstanceBeginEditable name="title" -->
 <title>與會台灣學者--國立政治大學--後現代教育論壇</title>
 <!-- InstanceEndEditable -->
@@ -277,7 +279,7 @@
 </div-->
 </footer>
 
-<script src="js/jquery.min.js" type="text/javascript"></script>
+
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <!--script src="../Teachers/PostModern/js/bootstrap.min.js" type="text/javascript"></script-->
 <!-- InstanceBeginEditable name="js" -->
