--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+ 		 <meta name="p:domain_verify" content="807cb857861f15c1cf2692b97c085ed3"/>
     <title>Radian Studio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
